Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -15,4 +15,4 @@ div {
 }
 
 #orange { border-top-second-color: #ffa500; }
-#yellow { border-top-third-color : 
+#yellow { border-top-third-color : #ff0; }
