--- a/main.css
+++ b/main.css
@@ -14,5 +14,5 @@ div {
   border-top-color: #f00;
 }
 
-#orange { border-top-second-color: #ffa500; }
-#yellow { border-top-third-color : #ff0; }
+#orange { border-top-color: #ffa500; }
+#yellow { border-top-color : #ff0; }
