--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ div {
 #red { /* this selects any elements with the red id */
   border-top-color: #f00;
 }
-
 #orange { border-top-color: #ffa500; }
 #yellow { border-top-color : #ff0; }
-#green {border-top-color: 
+#green { border-top-color: #00bc3f;}
+#blue { border-top-color: 
