--- a/main.css
+++ b/main.css
@@ -15,5 +15,6 @@ div {
 }
 #orange { border-top-color: #ffa500; }
 #yellow { border-top-color : #ff0; }
-#green { border-top-color: #00bc3f;}
-#blue { border-top-color: 
+#green { border-top-color: #00bc3f; }
+#blue { border-top-color: #06f; }
+#blue { border-top-color: #06f; }
