--- a/main.css
+++ b/main.css
@@ -18,4 +18,4 @@ div {
 #green { border-top-color: #00bc3f; }
 #blue { border-top-color: #06f; }
 #indigo { border-top-color: #8a2be2; }
-#blue { border-top-color: #06f; }
+#violet { border-top-color: #d300c9; }
